# envri-hub

./: .gitignore  README.md  environment.yml  pyproject.toml
examples/: iagos_introspection_demo.ipynb  iagos_ozone_analysis.ipynb
src/iagos_envri/: __init__.py  iagos_introspection.py
tests/: __init__.py
