[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iagos-envri-introspection"
version = "1.0.0"
description = "ENVRI-ID token introspection demonstration using IAGOS atmospheric data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AERIS Data Infrastructure", email = "support@aeris-data.fr"}
]
keywords = ["IAGOS", "ENVRI-ID", "SSO", "token introspection", "AERIS", "atmospheric data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "requests>=2.28.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "xarray>=0.20.0",
    "netcdf4>=1.5.8",
    "bottleneck>=1.3.6",
]

[project.optional-dependencies]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/aeris-data/iagos-envri-introspection"
Documentation = "https://github.com/aeris-data/iagos-envri-introspection/blob/main/README.md"
Repository = "https://github.com/aeris-data/iagos-envri-introspection.git"
"Bug Tracker" = "https://github.com/aeris-data/iagos-envri-introspection/issues"

[project.scripts]
iagos-download = "iagos_envri.iagos_introspection:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"